# chlib

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt  node.ini  requirements.txt  wasm32.ini
app/: CMakeLists.txt  error.c  errorstack.c  meson.build  real.c  string.c
app/errorstack/: file1.c  file1.h  meson.build  stack.c
app/gsl/: meson.build
app/gsl/roots/: meson.build
app/xs_rect/: CMakeLists.txt  spec_energy.c
chl1d/: meson.build  rectxs.c
chl1d/compoundxs/: array.c  array.h  meson.build  properties.h
chl1d/compoundxs/tests/compound/: comprect.c  free.c  new.c  props.c  rectangle.c
chl1d/compoundxs/tests/subsect/: free.c  new.c  rectangle.c  roughness.c
chl1d/compoundxs/tests/xsarray/: copy.c  eq.c  free.c  meson.build  new.c  vals.c
chl1d/compxs/: array.c  array.h  compound.c  coordinate.c  coordinate.h  meson.build  properties.c  properties.h  subsection.c  subsection.h
chl1d/compxs/tests/: meson.build
chl1d/compxs/tests/compound/: comprect.c  free.c  meson.build  new.c  props.c  rectangle.c
chl1d/compxs/tests/subsect/: free.c  meson.build  new.c  props.c  rectangle.c  roughness.c
chl1d/compxs/tests/xsarray/: copy.c  eq.c  free.c  meson.build  new.c  subarray.c  vals.c
chl1d/tests/: meson.build
chl1d/tests/rectxs/: free.c  meson.build  new.c
chlutil/: constants.c  error.c  error.h  meson.build  string.c
chlutil/tests/: meson.build
chlutil/tests/constants/: meson.build  test.c
chlutil/tests/error/: free.c  istype.c  meson.build  new.c  raise.c  stackcheck.c  stackcheckfail.c
chlutil/tests/string/: copy.c  eq.c  get.c  meson.build  new.c
chlw2/: grid.c  meson.build
chlw2/tests/: meson.build
chlw2/tests/grid/: free.c  meson.build  new.c  setget.c
chlw2/tests/sgrid/: free.c  meson.build  new.c  setget.c
docs/: .buildinfo  Doxyfile  chlmath.rst  conf.py  genindex.html  index.html  index.rst  make.bat  objects.inv  search.html  searchindex.js
docs/_sources/api/: chl.rst.txt
docs/_static/js/: chlib.js
docs/api/: chl.html  chlmath.html  chlmatrix.html  index.html
docs/demo/: index.html  matrix.html
docs/source/: build.md  conf.py  index.rst
docs/source/api/: chl1d.rst  chl_constants.rst  chl_error.rst  chl_reach.rst  chl_string.rst  chl_xs.rst  chlconstants.rst  chlerror.rst  chlmath.rst  chlmatrix.rst  chlstring.rst  chlxs.rst  index.rst
docs/source/demo/: index.rst  matrix.rst
docs/source/w2/: api.rst  equations.rst  index.rst  solution.rst
ems/: matrix.c  meson.build
examples/io/yaml/: CMakeLists.txt  EX1.RM0.2.yaml  xs_coords.c  yaml.c
examples/xs/: BEAVCREK.RM5.61.g01  CMakeLists.txt  EX1.RM0.2.g01  coords.c
examples/yaml/: CMakeLists.txt  EX1.RM0.2.yaml  xs.c  xs_coords.c  yaml.c  yaml_string.c
gsl/: config.h  meson.build
gsl/doc/examples/: meson.build  rootnewt.c
gsl/err/: meson.build
gsl/roots/: fdfsolver.c  meson.build
gsl/sys/: meson.build
include/: chl.h
include/chl/: chl1d.h  chl1dcompoundxs.h  chl1dcompxs.h  chl_constants.h  chl_error.h  chl_exit.h  chl_io.h  chl_reach.h  chl_string.h  chl_xs.h  chlconstants.h  chlerror.h  chlmath.h  chlstring.h  chlw2.h  chlxs.h  io.h  xs.h  yaml.h
include/chl/xs/: coordarray.h  coordinate.h
js/: meson.build
src/: CMakeLists.txt  ch_io_ras.c  ch_io_yaml.h  ch_io_yaml_xs.c  ch_xs.c  ch_xs_coords.c  ch_xs_coords.h  ch_xs_coords.test.cpp  ch_xs_subsect.c  ch_xs_subsect.h  ch_yaml.h  ch_yaml_emit.c  ch_yaml_parse.c  ch_yaml_xs.c  chl_io.h  chlerror.c  chlmatrix.c  chlstring.c  chlxs.c  error.c  error.h  exit.c  list.c  list.h  memory.c  memory.h  meson.build  reach.c  string.c  xs_array.c  xs_array.h  xs_compound.c  xs_coordinate.c  xs_coordinate.h  xs_properties.c  xs_properties.h  xs_rect.c  xs_subsection.c  xsection.c
src/xs/: CMakeLists.txt  coordarray.test.cpp  coordinate.test.cpp
src/xsection/: array.c  array.h  compound.c  coordinate.c  coordinate.h  meson.build  properties.c  properties.h  rect.c  subsection.c  subsection.h
subprojects/gsl/: meson.build
subprojects/gsl/doc/examples/: meson.build
subprojects/gsl/roots/: newton.c
subprojects/gsl/sys/: infnan.c
test/: CMakeLists.txt
tests/: CMakeLists.txt  ch_xs_coords.test.cpp  ch_yaml.test.cpp  ch_yaml_emit.test.cpp  ch_yaml_parse.test.cpp  chltest.h  constants.c  error_free.c  error_istype.c  error_new.c  error_raise.c  error_raise_fail.c  error_stack_check.c  error_stack_check_fail.c  meson.build  reach_free.c  reach_get_sta.c  reach_get_xsp.c  reach_new.c  reach_set_sta.c  reach_thalweg.c  string_copy.c  string_eq.c  string_free.c  string_get.c  string_new.c  test.h  test_check_args.c  test_constants.c  test_error.c  test_exit.c  test_reach.c  test_string.c  test_xs_array.c  test_xs_comp.c  test_xs_rect.c  test_xs_subsect.c  xs_array_copy.c  xs_array_eq.c  xs_array_free.c  (+15 more)
tests/constants/: meson.build  test.c
tests/error/: free.c  istype.c  meson.build  new.c  raise.c  raisefail.c  stackcheck.c  stackcheckfail.c
tests/matrix/: eq.c  eye.c  meson.build  mult.c  new.c  new_from.c  size.c  transpose.c  zeros.c
tests/memory/: CMakeLists.txt  matrix_mem_test.c  meson.build
tests/san/: CMakeLists.txt  access-after-free.c  double-free.c
tests/string/: copy.c  eq.c  free.c  get.c  meson.build  new.c
tests/unit/: matrix.c
tests/xs/: free.c  meson.build  new.c
tests/xsection/: meson.build  rectangle.c  rectangle.h
tests/xsection/compound/: comprect.c  free.c  meson.build  props.c  rectangle.c
tests/xsection/rect/: free.c  meson.build  new.c
tests/xsection/subsect/: area.c  free.c  hr.c  meson.build  new.c  props.c  rectangle.c  roughness.c  tw.c  wp.c
tests/xsection/xsarray/: copy.c  eq.c  free.c  meson.build  new.c  subarray.c
