chl_sources = [
  'constants.c',
  'error.c',
  'list.c',
  'memory.c',
  'reach.c',
  'string.c',
  'xs_array.c',
  'xs_compound.c',
  'xs_coordinate.c',
  'xs_properties.c',
  'xs_rect.c',
  'xs_subsection.c'
]

chlib = library('chlib',
    chl_sources,
    include_directories : [chl_inc],
    dependencies : m_dep)
